// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> should match the snapshot 1`] = `
.c4 {
  display: block;
  margin-bottom: 5px;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c5 {
  color: #424242;
  margin: 0 0 0 12px;
}

.c2 {
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2[disabled] {
  cursor: not-allowed;
}

.c2[disabled] ~ .c3 {
  color: #999999;
}

<div
  className="Checkbox__Wrapper-sc-1ca5whm-0"
>
  <div
    className="c0"
  >
    <input
      checked={false}
      className="c1 c2"
      disabled={false}
      id=""
      name="foo"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3"
      data-qtm-preloader="icon"
      focusable="false"
      style={
        Object {
          "color": "",
          "fontSize": 24,
          "maxWidth": 24,
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
      />
    </svg>
    <label
      className="c3 c4 c5"
      htmlFor=""
    >
      
    </label>
  </div>
  
</div>
`;

exports[`<Checkbox /> should match the snapshot 2`] = `
.c6 {
  color: #ac001a;
  margin-top: 8px;
  cursor: text;
  display: block;
  line-height: normal;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
}

.c4 {
  display: block;
  margin-bottom: 5px;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c5 {
  color: #424242;
  margin: 0 0 0 12px;
}

.c7[disabled] ~ .c3 {
  color: #999999;
}

.c2 {
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2[disabled] {
  cursor: not-allowed;
}

.c2[disabled] ~ .c3 {
  color: #999999;
}

<div
  className="Checkbox__Wrapper-sc-1ca5whm-0"
>
  <div
    className="c0"
  >
    <input
      checked={false}
      className="c1 c2"
      disabled={false}
      id=""
      name="foo"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3"
      data-qtm-preloader="icon"
      focusable="false"
      style={
        Object {
          "color": "",
          "fontSize": 24,
          "maxWidth": 24,
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
      />
    </svg>
    <label
      className="c3 c4 c5"
      htmlFor=""
    >
      
    </label>
  </div>
  <span
    className="c6"
  >
    error message
  </span>
</div>
`;

exports[`<Checkbox /> should match the snapshot 3`] = `
.c6 {
  color: #ac001a;
  margin-top: 8px;
  cursor: text;
  display: block;
  line-height: normal;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
}

.c4 {
  display: block;
  margin-bottom: 5px;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c5 {
  color: #424242;
  margin: 0 0 0 12px;
}

.c7[disabled] ~ .c3 {
  color: #999999;
}

.c2 {
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2[disabled] {
  cursor: not-allowed;
}

.c2[disabled] ~ .c3 {
  color: #999999;
}

<div
  className="Checkbox__Wrapper-sc-1ca5whm-0"
>
  <div
    className="c0"
  >
    <input
      checked={true}
      className="c1 c2"
      disabled={false}
      id=""
      name="foo"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3"
      data-qtm-preloader="icon"
      focusable="false"
      style={
        Object {
          "color": "",
          "fontSize": 24,
          "maxWidth": 24,
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
      />
    </svg>
    <label
      className="c3 c4 c5"
      htmlFor=""
    >
      
    </label>
  </div>
  <span
    className="c6"
  >
    error message
  </span>
</div>
`;

exports[`<Checkbox /> should match the snapshot 4`] = `
.c4 {
  display: block;
  margin-bottom: 5px;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c5 {
  color: #424242;
  margin: 0 0 0 12px;
}

.c2 {
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2[disabled] {
  cursor: not-allowed;
}

.c2[disabled] ~ .c3 {
  color: #999999;
}

.c6[disabled] ~ .c3 {
  color: #999999;
}

<div
  className="Checkbox__Wrapper-sc-1ca5whm-0"
>
  <div
    className="c0"
  >
    <input
      checked={true}
      className="c1 c2"
      disabled={false}
      id=""
      name="foo"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3"
      data-qtm-preloader="icon"
      focusable="false"
      style={
        Object {
          "color": "",
          "fontSize": 24,
          "maxWidth": 24,
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
      />
    </svg>
    <label
      className="c3 c4 c5"
      htmlFor=""
    >
      
    </label>
  </div>
  
</div>
`;

exports[`<Checkbox /> should match the snapshot 5`] = `
.c4 {
  display: block;
  margin-bottom: 5px;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c5 {
  color: #424242;
  margin: 0 0 0 12px;
}

.c2 {
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2[disabled] {
  cursor: not-allowed;
}

.c2[disabled] ~ .c3 {
  color: #999999;
}

.c6[disabled] ~ .c3 {
  color: #999999;
}

<div
  className="Checkbox__Wrapper-sc-1ca5whm-0"
>
  <div
    className="c0"
  >
    <input
      checked={false}
      className="c1 c2"
      disabled={true}
      id=""
      name="foo"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3"
      data-qtm-preloader="icon"
      focusable="false"
      style={
        Object {
          "color": "",
          "fontSize": 24,
          "maxWidth": 24,
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
      />
    </svg>
    <label
      className="c3 c4 c5"
      htmlFor=""
    >
      
    </label>
  </div>
  
</div>
`;

exports[`<Checkbox /> should match the snapshot 6`] = `
.c4 {
  display: block;
  margin-bottom: 5px;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c5 {
  color: #424242;
  margin: 0 0 0 12px;
}

.c2 {
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2[disabled] {
  cursor: not-allowed;
}

.c2[disabled] ~ .c3 {
  color: #999999;
}

.c6[disabled] ~ .c3 {
  color: #999999;
}

<div
  className="Checkbox__Wrapper-sc-1ca5whm-0"
>
  <div
    className="c0"
  >
    <input
      checked={false}
      className="c1 c2"
      disabled={false}
      id=""
      name="foo"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3"
      data-qtm-preloader="icon"
      focusable="false"
      style={
        Object {
          "color": "",
          "fontSize": 24,
          "maxWidth": 24,
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
      />
    </svg>
    <label
      className="c3 c4 c5"
      htmlFor=""
    >
      Some text
    </label>
  </div>
  
</div>
`;

exports[`<Checkbox /> should match the snapshot 7`] = `
.c4 {
  display: block;
  margin-bottom: 5px;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c5 {
  color: #424242;
  margin: 0 0 0 12px;
}

.c2 {
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2[disabled] {
  cursor: not-allowed;
}

.c2[disabled] ~ .c3 {
  color: #999999;
}

.c6[disabled] ~ .c3 {
  color: #999999;
}

<div
  className="Checkbox__Wrapper-sc-1ca5whm-0"
>
  <div
    className="c0"
  >
    <input
      checked={true}
      className="c1 c2"
      disabled={true}
      id=""
      name="foo"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3"
      data-qtm-preloader="icon"
      focusable="false"
      style={
        Object {
          "color": "",
          "fontSize": 24,
          "maxWidth": 24,
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
      />
    </svg>
    <label
      className="c3 c4 c5"
      htmlFor=""
    >
      
    </label>
  </div>
  
</div>
`;
